# tutorial

./: README.md  main.sh  neuroimaging_tutorial.ipynb  pyproject.toml
.ipynb_checkpoints/: neuroimaging_tutorial-checkpoint.ipynb
